--- a/renovate.json
+++ b/renovate.json
@@ -3,13 +3,15 @@
 	"extends": ["config:recommended"],
 	"lockFileMaintenance": {
 		"enabled": true,
-		"automerge": true
+		"automerge": true,
+		"requiredStatusChecks": ["Unit Tests", "Playwright Tests"]
 	},
 	"packageRules": [
 		{
 			"matchUpdateTypes": ["minor", "patch"],
 			"matchCurrentVersion": "!/^0/",
-			"automerge": true
+			"automerge": true,
+			"requiredStatusChecks": ["Unit Tests", "Playwright Tests"]
 		}
 	]
 }
