--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,19 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"vcs": {
+		"enabled": false,
+		"clientKind": "git",
+		"useIgnoreFile": false
+	},
+
+	"files": {
+		"ignoreUnknown": false,
+		"ignore": ["dist/", "chrome/"]
+	},
+	"formatter": {
+		"enabled": true,
+		"indentStyle": "tab"
+	},
 	"organizeImports": {
 		"enabled": true
 	},
@@ -19,25 +33,9 @@
 			"jsxQuoteStyle": "single"
 		}
 	},
-	"overrides": [
-		{
-			"include": [".vscode/**"],
-			"json": {
-				"parser": {
-					"allowComments": true,
-					"allowTrailingCommas": true
-				}
-			}
+	"json": {
+		"parser": {
+			"allowComments": true
 		}
-	],
-	"files": {
-		"ignore": [
-			"e2e/user.json",
-			"*.ico",
-			"*.jpg",
-			"src/route-tree.gen.ts",
-			"migrations/",
-			"dist/"
-		]
 	}
 }
