--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 node_modules/
 dist/
-sqlite.db
-/dev-dist/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+test-results/
+playwright-report/
+blob-report/
+.cache/
+chrome/
 .env
-.DS_Store
-local.db
-readme-ai.md
-/e2e/user.json
-gha-creds-*.json
-vite.config.ts.*
-coverage/
-.idea/
+.ci.env
+openapi-ts-error*
