--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,7 +1,6 @@
 name: Code Quality
 
 on:
-  - push
   - pull_request
 
 jobs:
@@ -15,10 +14,10 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 23
 
       - name: Setup Biome CLI
         uses: biomejs/setup-biome@v2
-        
+
       - name: Run Biome
-        run: biome ci src
+        run: biome ci .
