--- a/fly.toml
+++ b/fly.toml
@@ -1,28 +1,23 @@
-app = 'fastivite'
-primary_region = 'arn'
-
-
-[mounts]
-source = "htmlcache"
-destination = "/htmlcache"
-
-
-[env]
-NODE_ENV = "production"
-HOST = "0.0.0.0"
-PORT = "3000"
+app = 'giacomorebonato-winter-sun-5364'
+primary_region = 'ams'
 
 [build]
 
+[env]
+  NODE_ENV = 'production'
+  HOST = '0.0.0.0'
+  HOST_NAMES_REDIRECT_FROM = 'giacomorebonato.com,giacomorebonato-winter-sun-5364.fly.dev'
+  SITE_URL = 'https://www.giacomorebonato.com'
+
 [http_service]
-internal_port = 3000
-force_https = true
-auto_stop_machines = 'stop'
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = "stop"
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-memory = '1gb'
-cpu_kind = 'shared'
-cpus = 2
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
