--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,7 @@ primary_region = 'ams'
   HOST = '0.0.0.0'
   HOST_NAMES_REDIRECT_FROM = 'giacomorebonato.com,giacomorebonato-winter-sun-5364.fly.dev'
   SITE_URL = 'https://www.giacomorebonato.com'
+  PORT = '3000'
 
 [http_service]
   internal_port = 3000
